# Alice-Node

./: .gitignore  LICENSE  README.md  README_CN.md  alice-miner.spec  alice_miner.py  alice_node.py  index.html  install.bat  install.sh  package-lock.json  package.json  requirements.txt  start_mining.bat  start_mining.sh  start_multi_gpu.sh  stop_multi_gpu.sh  tailwind.config.js  windows_check.bat  windows_check.ps1
.github/workflows/: build-binary.yml  build.yml  sync-miner.yml
aggregator/: AGGREGATOR_GUIDE.md  aggregator_node.py  install_aggregator.sh  start_aggregator.sh  streaming_aggregator.py
common/: __init__.py  chain.py  utils.py  wallet.py
core/: model.py
miner/: alice_miner.py
miner/core/: model.py
miner/src/: __init__.py  compression.py  model.py
scorer/: SCORER_GUIDE.md  install_scorer.sh  scoring_server.py  start_scorer.sh
scripts/: build-miner-core.sh  build.sh  download_shards.sh
src/: App.tsx  model.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: aggregating.rs  gpu.rs  mining.rs  mod.rs  model.rs  network.rs  role.rs  scoring.rs  settings.rs  setup.rs  staking.rs  wallet.rs
src-tauri/src/services/: updater.rs
src/components/: Sidebar.tsx
src/hooks/: useAppStore.ts
src/pages/: AggregatorDashboard.tsx  Dashboard.tsx  Earnings.tsx  Hardware.tsx  Logs.tsx  ScorerDashboard.tsx  Settings.tsx  Setup.tsx  Staking.tsx  Wallet.tsx
src/styles/: index.css
src/types/: tauri.d.ts
